# arcan

./: .gitignore  CHANGELOG.md  Makefile  README.md  firebase.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  tailwind.config.ts  tsconfig.json  utils.ts
.github/: FUNDING.yml
.github/workflows/: python-ci.yml
api/: index.py
api/arcan/: __init__.py
app/: firebase.ts  globals.css  layout.tsx  page.tsx  utils.ts
app/about/: page.tsx
app/auth/: auth.ts  layout.tsx  login.tsx  logout.tsx  page.tsx
app/categories/: layout.tsx  page.tsx
app/config/: firebase.ts  utils.ts
app/context/: auth.tsx
app/dashboard/: AddNew.tsx  Header.tsx  MobileNav.tsx  SideNav.tsx  layout.tsx  page.tsx
app/examples/: layout.tsx
app/products/: layout.tsx  page.tsx
app/sales/: layout.tsx  page.tsx
app/spells_studio/: actions.ts  layout.tsx  page.tsx
arcan/: __init__.py
arcan/agent/: agents.py  async_handler.py  chains.py  helpers.py  llm.py  parser.py  prompt.py  scrapping.py  streaming_gpt.py  templates.py  text_chat.py  vectorstores.py
arcan/api/: __init__.py
arcan/executor/: __init__.py
arcan/model/: cluster.py  manifest.py
arcan/pipeline/: __init__.py
arcan/session/: auth.py
arcan/spells/: vector_search.py
arcan/storage/: __init__.py
components/: clear-history.tsx  header.tsx  login-button.tsx  prompt-form.tsx  sidebar-list.tsx  sidebar.tsx  user-menu.tsx
components/ui/: dropdown-menu.tsx  (+1 more)
mdit/: __init__.py  datamodels.py
pages/: about.tsx  arcan_report.tsx  examples.tsx
prisma/: schema.prisma
(+87 files in other folders)
