[tool.poetry]
name = "arcan"
version = "1.3.9"
description = "A multiheaded modern data bridging package based on pipeline manifests to integrate between any modern (and old) data stack tools"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "arcan.ai Non-Commercial Open Source License"
readme = "README.md"
packages = [
    {include = "arcan"},
    {include = "main.py"}
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "<=2.0.5"
fastapi = ">=0.98,<0.103.1"
uvicorn = "^0.23.2"
modal-client = ">=0.49.2509,<0.52.3518"
black = "^23.3.0"
langchain = "^0.0.295"
openai = "^0.28.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
