[tool.poetry]
name = "arcan"
version = "0.0.1"
description = "An AI web3 tooling platform for the decentralized customization and enhancement of AI agents"
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
urllib3 = "^1.26.16"
fastapi = "^0.110.0"
openai = "^1.14.0"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.3"

[tool.poetry.scripts]
arcan = 'arcan:entrypoint'